cmake_minimum_required(VERSION 3.0)
PROJECT(SymulacjaPracyPlanisty)
include_directories(inc)
file(GLOB SOURCE "src/*.cpp" "inc/*.hh")
add_executable(${PROJECT_NAME} ${SOURCE})
set(THREADS_PREFER_PTHREAD_FLAG ON)
find_package(Threads REQUIRED)
target_link_libraries(SymulacjaPracyPlanisty Threads::Threads)
target_link_libraries(SymulacjaPracyPlanisty GLU)
target_link_libraries(SymulacjaPracyPlanisty GL)
target_link_libraries(SymulacjaPracyPlanisty pthread)
target_link_libraries(SymulacjaPracyPlanisty crypto ssl)
target_compile_features(SymulacjaPracyPlanisty PRIVATE cxx_std_17)
set(CMAKE_BUILD_TYPE Debug)
add_compile_options(-Wall -Wextra -pedantic -Werror -lssl -lcrypto -std=gnu++17)
